# MCPBLA-mirror

./: .gitattributes  .gitignore  MCP_GOLDEN_PATH.md  README.md  pyproject.toml
blender/addon/: bridge_client.py  mcp_blender_addon.py
blender/scripts/: demo_connect.py  demo_run_task.py  demo_scene_snapshot.py
docs/: ARCHITECTURE_MDCPBLA.md  BRIDGE_BLENDER_OVERVIEW.md  MCP_TOOLS_OVERVIEW.md  PHASE_BRIDGE_CORE_PLAN.md  PHASE_CORE_CHECK.md  TESTS_MCPBLA.md
mcp/: claude_code_config.example.json  claude_desktop_config.example.json
scripts/: demo_actions.py  demo_dummy_snapshot.py  demo_end_to_end.py  doctor.ps1  e2e_bridge.ps1  e2e_bridge.py  e2e_stub.ps1  e2e_stub.py  e2e_studio_test.py  git_pushall.ps1  live_test_cycle.py  package_addon.py  purge_installed_addon.py  rebuild_addon.py  reset_all.ps1  reset_bridge.ps1  run_blender_bridge.ps1  run_mcp.ps1  run_server_bridge.ps1  run_server_stub.ps1  smoke_http.ps1  start_mcp_server.py
scripts/dev/: README.md  e2e_bridge_real.py  golden_path.py  probe_bridge.ps1  reset_dev.ps1  start_server.ps1
scripts/ui/: reset_blender.ps1  reset_bridge.ps1  reset_server.ps1
server/: mcp_server.py
server/agents/: fx_agent.py  (+7 more)
tests/: test_agents.py  test_blender_tools_stub.py  test_bridge_lifecycle.py  test_doctor_rules.py  test_mcp_server.py  test_modeler_agent_v3.py  test_orchestrator.py  test_orchestrator_v3.py  test_scene_state.py  test_scenegraph_live.py  test_shader_agent_v3.py  test_stub_e2e_flow.py  test_studio_tools_stub.py
tests_disabled/: test_bridge_lifecycle.py  test_e2e_bridge_contract.py  test_mcp_server.py
(+163 files in other folders)
