[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-blender-orchestrator"
version = "0.1.0"
description = "MCP server hosting multiple LLMs with Blender bridge and orchestration"
authors = [{name = "MCPBLA Team"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "blender", "orchestrator", "llm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.23.0",
  "pydantic>=2.8.0",
  "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.21",
  "anyio>=4.4",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcpbla"]

